fixed scss errors across site

--- a/line-height.html
+++ b/line-height.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Line Height</title>
-    <link href="style/style.css" rel="stylesheet"/>
-    <link href="style/line-height-style.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
