--- a/web-fonts.html
+++ b/web-fonts.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Web Fonts</title>
-    <link href="style/style.css" rel="stylesheet"/>
-    <link href="style/web-fonts-style.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
