--- a/css-animations.html
+++ b/css-animations.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>CSS Animations</title>
-    <link href="style/style.css" rel="stylesheet"/>
-    <link href="style/border-radius-style.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
