--- a/javascript-variables.html
+++ b/javascript-variables.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>JavaScript: Variables</title>
-    <link href="style/style.css" rel="stylesheet"/>
-    <link href="style/javascript-variables-style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
