--- a/opacity.html
+++ b/opacity.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Opacity</title>
-    <link href="style/style.css" rel="stylesheet"/>
-    <link href="style/opaque-style.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
