added chain chomp bitey to css transition

--- a/css-transition.html
+++ b/css-transition.html
@@ -111,6 +111,9 @@
 
         <p><strong>Note:</strong> Due to certain compatabilities, it may be necessary/wise to add vendor prefixes to your transition property to ensure compatability across various browers. A list of prefixes can be found on MDN's CSS Transitions page (below).</p>
 
+        <p class="bite-text">Dare you pet the all-powerful chain chomp?</p>
+
+        <img src="images/chain_chomp_bite.gif" class="bite"/>
 
         <p class="add-res">Additional Resources:</p>
         <p><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Transitions/Using_CSS_transitions">Mozilla Developer's Network</a></p>
