added pulse box, but commented out. still in code for future use

--- a/css-animations.html
+++ b/css-animations.html
@@ -73,6 +73,8 @@
       <div class="content">
         <h1>CSS ANIMATIONS</h1>
 
+        <!-- <div class="move"></div> -->
+
         <div class="arena">
           <img src="images/pac-man-ghost.png" class="ghost"/>
         </div>
